--- a/index.html
+++ b/index.html
@@ -14,22 +14,35 @@
 <body onload="mouseover01(),mouseover02(),mouseover3(),mouseover4(),mouseover5(),mouseover6()">
 
 
-  <header>
+  <header class="desktop-menu">
     <!--Navigation Desktop Start-->
     <div class="navcontainer">
       <a class="logo" href="#first"><img src="images/logo.svg" alt="logo"></a>
       <nav class="navigation">
-        <a href="#first" id="color1" class="active">Home</a>
-        <a href="#second" id="color2">General Info</a>
-        <a href="#third" id="color3">Core Areas</a>
-        <a href="#fourth" id="color4">Exams</a>
-        <a href="#fifth" id="color5">Internship</a>
-        <a href="#six" id="color6">Study Abroad</a>
+        <a href="#first" id="color1" class="color1 active">Home</a>
+        <a href="#second" class="color2">General Info</a>
+        <a href="#third" class="color3">Core Areas</a>
+        <a href="#fourth" class="color4">Exams</a>
+        <a href="#fifth" class="color5">Internship</a>
+        <a href="#six" class="color6">Study Abroad</a>
       </nav>
     </div>
     <!--Navigation Desktop End-->
   </header>
 
+    <header>
+    <div class="burger-menu-container">
+      <input class="burger-check" id="burger-check" type="checkbox"><label for="burger-check" class="burger"></label>
+        <nav id="navigation1" class="navigation">
+          <a href="#first" id="color1b" class="color1 active">Home</a>
+            <a href="#second" class="color2">General Info</a>
+            <a href="#third" class="color3">Core Areas</a>
+            <a href="#fourth" class="color4">Exams</a>
+            <a href="#fifth" class="color5">Internship</a>
+            <a href="#six" class="color6">Study Abroad</a>
+        </nav>
+    </div>
+    </header>
 
   <main>
     <!--Intro-->
