--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <p>The objective of the programme is to provide graduates with the qualifications needed to inde-pendently design, plan, realise and manage multimedia tasks and to assist in the implementation, administration and maintenance of multimedia productions.</p>
           <h3>Programme Elelements</h3>
 
-          <table>
+          <table class="program-elements-table">
           <tr>
             <td rowspan="2" class="tableheading">Fourth semester </td>
             <td colspan="2">Final exam project (15 ECTS) </td>
@@ -89,10 +89,37 @@
           </tr>
         </table>
 
+        <div class="program-elements-div">
+            <div class="program-el-title">
+                Fourth semester
+            </div>
+            <div class="program-el-element">
+                Final exam project (15 ECTS)
+            </div>
+            <div class="program-el-element">
+                Internship (15 ECTS)
+            </div>
+            <div class="program-el-title">
+                Third semester
+            </div>
+            <div class="program-el-element">
+               Multimedia Production Advanced (20 ECTS)
+            </div>
+            <div class="program-el-element">
+                Elective programme elements (10 ECTS)
+            </div>
+            <div class="program-el-title">
+                Second semester, First semester
+            </div>
+            <div class="program-el-element">
+               Multimedia Production Basic (60 ECTS)
+            </div>
+        </div>
+
+
         </div>
       </div>
     </section>
-
 
 
 
@@ -309,6 +336,7 @@
 
 
         </div>
+
       </div>
     </section>
 
